# Route_optimizer_ADA

./: .firebaserc  .gitignore  README.md  Route Optimizer.md  hello.py
backend/: .env.example  .gcloudignore  DEPLOY.md  deploy.ps1  deploy.sh  distance_matrix.py  env.deploy.yaml.example  genetic_algorithm.py  main.py  maps_proxy.py  pyproject.toml  requirements.txt  serve.ps1  update-env.ps1  validation.py
backend/tests/: test_genetic_algorithm.py
diagrams/: architecture.drawio  flow.drawio
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AuthForm.jsx  DestinationInput.jsx  Map.jsx  RadiusValidation.jsx  RouteOptions.jsx  RouteResult.jsx
frontend/src/services/: cloudFunction.js  drivingRoute.js  firebase.js  mapsProxy.js  places.js  roadDistance.js
frontend/src/utils/: distance.js  formatDuration.js
